--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=ecommerce
 
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:c4dfd43d-3d24-4578-af4d-343e57e6db1d
-spring.datasource.username=SA
+spring.datasource.url=jdbc:mysql://localhost:3306/e_commerce
+spring.datasource.username=root
+spring.datasource.password=123456
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
