--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 project.image=images/
+
+spring.app.jwtSecret=
+spring.app.jwtExpirationMs=3000000
+
+logging.level.org.springframework=DEBUG
+logging.level..org.springframework.security=DEBUG
+logging.level..org.hibernate.SQL=DEBUG
+logging.level.base.ecommerce.project=DEBUG
