--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,11 @@ spring.jpa.hibernate.ddl-auto=update
 
 project.image=images/
 
-spring.app.jwtSecret=
+spring.app.jwtSecret=h32XJz3k2HD6Jk+JmZbycD7YtOXJhE5HjPeDqYlhXMQ
 spring.app.jwtExpirationMs=3000000
 
 logging.level.org.springframework=DEBUG
 logging.level..org.springframework.security=DEBUG
 logging.level..org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
 logging.level.base.ecommerce.project=DEBUG
