--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ project.image=images/
 
 spring.app.jwtSecret=h32XJz3k2HD6Jk+JmZbycD7YtOXJhE5HjPeDqYlhXMQ
 spring.app.jwtExpirationMs=3000000
+spring.app.jwtCookieName=jwtposKrqfWZYwxlsvj
 
 logging.level.org.springframework=DEBUG
 logging.level..org.springframework.security=DEBUG
